hphp/hack/test/typecheck/variadic_args5.php.exp
File "variadic_args5.php", line 13, characters 7-8:
This object is of type C2 (Typing[4043])
File "variadic_args5.php", line 13, characters 18-19:
It is incompatible with this object of type C1
because some declarations are incompatible.
Read the following to see why:
File "variadic_args5.php", line 14, characters 19-22:
Variadic arguments: ...-style is not a subtype of ...$args
File "variadic_args5.php", line 10, characters 19-22:
Because of this definition
